# pgn2fen-benchmark

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
model_logs/: deepseek_deepseek-chat.jsonl  deepseek_deepseek-reasoner.jsonl  google_gemini-2.0-flash-001.jsonl  google_gemini-2.0-flash-lite-001.jsonl  google_gemini-2.5-flash-preview-04-17.jsonl  google_gemini-2.5-flash-preview-04-17_think0.jsonl  google_gemini-2.5-flash-preview-04-17_think1024.jsonl  google_gemini-2.5-flash-preview-04-17_think2048.jsonl  google_gemini-2.5-flash-preview-04-17_think256.jsonl  google_gemini-2.5-flash-preview-04-17_think4096.jsonl  google_gemini-2.5-flash-preview-04-17_think512.jsonl  google_gemini-2.5-flash-preview-04-17_think8192.jsonl  google_gemini-2.5-pro-preview-03-25.jsonl  openai_gpt-4.1-2025-04-14.jsonl  openai_gpt-4.1-mini-2025-04-14.jsonl  openai_gpt-4.1-nano-2025-04-14.jsonl  openai_gpt-4o-2024-08-06.jsonl  openai_gpt-4o-mini-2024-07-18.jsonl  openai_o3-2025-04-16.jsonl  openai_o3-mini-2025-01-31.jsonl  openai_o4-mini-2025-04-16.jsonl
pgn2fen/: evaluate.py  llms.py  models.py  pgn_io.py  utils.py
results/: castling_non_reasoning.csv  castling_non_reasoning.md  castling_reasoning.csv  castling_reasoning.md  en_passant_non_reasoning.csv  en_passant_non_reasoning.md  en_passant_reasoning.csv  en_passant_reasoning.md  full_correctness_non_reasoning.csv  full_correctness_non_reasoning.md  full_correctness_reasoning.csv  full_correctness_reasoning.md  fullmove_number_non_reasoning.csv  fullmove_number_non_reasoning.md  fullmove_number_reasoning.csv  (+13 more)
(+4872 files in other folders)
